--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "api"]
-	path = api
+[submodule "backend/authentication-fastapi"]
+	path = backend/authentication-fastapi
 	url = git@github.com:keishi0510fujii/authentication-backend-fastapi.git
